# llm-japanese-dataset

./: .gitignore  README.md  pyproject.toml  version.py
.github/workflows/: blank.yml  build.yml  bump.yml  release.yml
datasets/: LICENSE  NOTICE.md
datasets-cc-by-sa/: NOTICE.md
datasets-cc-by-sa/aio/: README.md  generate.py
datasets-cc-by-sa/databricks-dolly-15k-ja/: 000005.json  000008.json  000013.json  README.md
datasets-cc-by-sa/jcommonsenseqa/: README.md  generate.py
datasets-cc-by-sa/jesc/: .gitignore  README.md  generate.py
datasets-cc-by-sa/jmrd/: .gitignore  README.md  generate.py
datasets-cc-by-sa/jqac/: .gitignore  README.md  generate.py
datasets-cc-by-sa/jsquad/: README.md  generate.py
datasets-cc-by-sa/wikipedia-ja-typo/: .gitignore  README.md  generate.py
datasets-cc-by-sa/wikipedia-summary/: .gitignore  README.md  generate.py
datasets/CourseraParallelCorpus/: .gitignore  README.md  generate.py
datasets/ParaNatCom/: .gitignore  README.md  generate.py
datasets/Tab-delimited_Bilingual_Sentence_Pairs/: .gitignore  README.md  generate.py
datasets/alpaca/: 0000000.json  0000001.json  00000011.json  00000014.json  00000015.json  00000016.json  00000017.json  00000021.json  00000022.json  00000024.json  00000028.json  00000029.json  00000031.json  00000036.json  00000037.json  00000038.json  00000040.json  00000042.json  00000043.json  00000047.json  0000007.json  0000008.json  0000009.json  000005.json  000006.json  000012.json  000018.json  000023.json  000048.json  000049.json  (+4 more)
utils/: build.sh  jq-slice-json.sh  jq-slice-jsonl.sh
(+15136 files in other folders)
