[tool.poetry]
name = "llm-japanese-dataset"
version = "0.1.0"
description = ""
authors = ["Masanori HIRANO <masa.hirano.1996@gmail.com>"]
readme = "README.md"
packages = [{include = "llm_japanese_dataset"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.2"
pandas = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
