[tool.poetry]
name = "llm-japanese-dataset"
version = "1.0.2"
description = ""
authors = ["Masanori HIRANO <masa.hirano.1996@gmail.com>"]
readme = "README.md"
packages = [{include = "llm_japanese_dataset"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.2"
pandas = "^2.0.0"
wikiextractor = "^3.0.6"
joblib = "^1.2.0"
openpyxl = "^3.1.2"
bs4 = "^0.0.1"
tqdm = "^4.65.0"
huggingface-hub = "^0.14.1"
datasets = "^2.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
